# ElectronicaDigitalIII_2023

./: .gitignore  README.md
00.RepasoDeC/: CMakeLists.txt  README.md
00.RepasoDeC/inc/: dataType.h  pointers.h  struct.h
00.RepasoDeC/src/: dataType.c  helloWorld.c  linkedList.c  main.c  pointers.c  struct.c
01.IDE/: README.md
02.GPIO/: README.md
02.GPIO/inc/: gpioHandler.h
02.GPIO/src/: blink.c  blinkWithHandler.c  gpioHandler.c
03.GPIOInterruptions/: README.md
03.GPIOInterruptions/src/: externalInterrupt.c  gpioInt.c
04.SysTick/: README.md
04.SysTick/src/: sysTick.c
05.Timers/: README.md
05.Timers/src/: timerMatchAndCapture.c
06.Drivers/: README.md
06.Drivers/src/: timersWithDrivers.c
07.ADC/: README.md
07.ADC/src/: adc.c
